[gd_scene load_steps=9 format=3 uid="uid://d3q1e5dyiic5v"]

[ext_resource type="Script" path="res://src/MainMenuUI.gd" id="1_1prhs"]
[ext_resource type="FontFile" uid="uid://be0wxrjh42okc" path="res://src/assets/Fonts/Poppins/Poppins-Black.ttf" id="1_pfw27"]
[ext_resource type="FontFile" uid="uid://nrqyq6e4vnlj" path="res://src/assets/Fonts/Poppins/Poppins-Medium.ttf" id="2_bgy54"]
[ext_resource type="FontFile" uid="uid://cvpm3sl6dimfg" path="res://src/assets/Fonts/Poppins/Poppins-MediumItalic.ttf" id="3_my10h"]
[ext_resource type="FontFile" uid="uid://ii2stee4kiwm" path="res://src/assets/Fonts/Poppins/Poppins-BlackItalic.ttf" id="4_oyjvv"]
[ext_resource type="PackedScene" uid="uid://bebgkxrau10o7" path="res://src/SaveFileUI.tscn" id="5_8hjiv"]
[ext_resource type="Script" path="res://src/SaveFiles.gd" id="6_pqrwe"]

[sub_resource type="ImageTexture" id="ImageTexture_aj5rr"]

[node name="MainMenuUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_1prhs")

[node name="BackgroundImage" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("ImageTexture_aj5rr")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.870588, 0.870588, 0.870588, 1)

[node name="Main" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 191.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Main"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="StartGame" type="Button" parent="Main/VBoxContainer"]
custom_minimum_size = Vector2(400, 80)
layout_mode = 2
theme_override_fonts/font = ExtResource("1_pfw27")
theme_override_font_sizes/font_size = 48
text = "START GAME"

[node name="Credits" type="Button" parent="Main/VBoxContainer"]
custom_minimum_size = Vector2(400, 80)
layout_mode = 2
theme_override_fonts/font = ExtResource("1_pfw27")
theme_override_font_sizes/font_size = 48
text = "CREDITS"

[node name="SaveLoad" type="CenterContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 191.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="SaveLoad"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="SaveGame" type="Button" parent="SaveLoad/VBoxContainer"]
custom_minimum_size = Vector2(400, 80)
layout_mode = 2
theme_override_fonts/font = ExtResource("1_pfw27")
theme_override_font_sizes/font_size = 48
text = "SAVE GAME"

[node name="LoadGame" type="Button" parent="SaveLoad/VBoxContainer"]
custom_minimum_size = Vector2(400, 80)
layout_mode = 2
theme_override_fonts/font = ExtResource("1_pfw27")
theme_override_font_sizes/font_size = 48
text = "LOAD GAME"

[node name="NewGameLoad" type="CenterContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 191.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="NewGameLoad"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="NewGame" type="Button" parent="NewGameLoad/VBoxContainer"]
custom_minimum_size = Vector2(400, 80)
layout_mode = 2
theme_override_fonts/font = ExtResource("1_pfw27")
theme_override_font_sizes/font_size = 48
text = "NEW GAME"

[node name="LoadGame" type="Button" parent="NewGameLoad/VBoxContainer"]
custom_minimum_size = Vector2(400, 80)
layout_mode = 2
theme_override_fonts/font = ExtResource("1_pfw27")
theme_override_font_sizes/font_size = 48
text = "LOAD GAME"

[node name="Back" type="Button" parent="NewGameLoad/VBoxContainer"]
custom_minimum_size = Vector2(400, 80)
layout_mode = 2
theme_override_fonts/font = ExtResource("1_pfw27")
theme_override_font_sizes/font_size = 48
text = "BACK"

[node name="Credits" type="CenterContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Credits"]
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="Credits/VBoxContainer"]
custom_minimum_size = Vector2(500, 500)
layout_mode = 2
follow_focus = true

[node name="RichTextLabel" type="RichTextLabel" parent="Credits/VBoxContainer/ScrollContainer"]
custom_minimum_size = Vector2(500, 500)
layout_mode = 2
theme_override_fonts/normal_font = ExtResource("2_bgy54")
theme_override_fonts/bold_font = ExtResource("1_pfw27")
theme_override_fonts/italics_font = ExtResource("3_my10h")
theme_override_fonts/bold_italics_font = ExtResource("4_oyjvv")
theme_override_font_sizes/normal_font_size = 36
theme_override_font_sizes/bold_font_size = 36
theme_override_font_sizes/italics_font_size = 36
theme_override_font_sizes/bold_italics_font_size = 36
theme_override_font_sizes/mono_font_size = 36
bbcode_enabled = true
text = "[b][i]CREDITS HERE[/i][/b]

NAME 1  
NAME 2
NAME 3
NAME 4
NAME 5
NAME 6
"
scroll_following = true

[node name="CenterContainer" type="CenterContainer" parent="Credits/VBoxContainer"]
layout_mode = 2

[node name="Back" type="Button" parent="Credits/VBoxContainer/CenterContainer"]
custom_minimum_size = Vector2(400, 80)
layout_mode = 2
theme_override_fonts/font = ExtResource("1_pfw27")
theme_override_font_sizes/font_size = 48
text = "BACK"

[node name="SaveFiles" type="CenterContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("6_pqrwe")

[node name="VBoxContainer" type="VBoxContainer" parent="SaveFiles"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="SaveFile" parent="SaveFiles/VBoxContainer" instance=ExtResource("5_8hjiv")]
layout_mode = 2
slot_number = 1

[node name="SaveFile2" parent="SaveFiles/VBoxContainer" instance=ExtResource("5_8hjiv")]
layout_mode = 2
slot_number = 2

[node name="SaveFile3" parent="SaveFiles/VBoxContainer" instance=ExtResource("5_8hjiv")]
layout_mode = 2
slot_number = 3

[node name="ConfirmationPanel" type="CenterContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="ConfirmationPanel"]
custom_minimum_size = Vector2(500, 300)
layout_mode = 2
color = Color(0.756863, 0.756863, 0.756863, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="ConfirmationPanel"]
custom_minimum_size = Vector2(500, 300)
layout_mode = 2
theme_override_constants/separation = 50
alignment = 1

[node name="Label" type="Label" parent="ConfirmationPanel/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_pfw27")
theme_override_font_sizes/font_size = 40
text = "Overwrite File??"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="ConfirmationPanel/VBoxContainer"]
custom_minimum_size = Vector2(500, 0)
layout_mode = 2
theme_override_constants/separation = 50
alignment = 1

[node name="BackButton" type="Button" parent="ConfirmationPanel/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(170, 0)
layout_mode = 2
theme_override_fonts/font = ExtResource("1_pfw27")
theme_override_font_sizes/font_size = 30
text = "BACK"

[node name="ConfirmButton" type="Button" parent="ConfirmationPanel/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(170, 0)
layout_mode = 2
theme_override_fonts/font = ExtResource("1_pfw27")
theme_override_font_sizes/font_size = 30
text = "CONFIRM"

[connection signal="pressed" from="Main/VBoxContainer/StartGame" to="." method="_on_start_game_pressed"]
[connection signal="pressed" from="Main/VBoxContainer/Credits" to="." method="_on_credits_pressed"]
[connection signal="pressed" from="SaveLoad/VBoxContainer/SaveGame" to="." method="_on_save_game_pressed"]
[connection signal="pressed" from="SaveLoad/VBoxContainer/LoadGame" to="." method="_on_in_game_load_game_pressed"]
[connection signal="pressed" from="NewGameLoad/VBoxContainer/NewGame" to="." method="_on_new_game_pressed"]
[connection signal="pressed" from="NewGameLoad/VBoxContainer/LoadGame" to="." method="_on_load_game_pressed"]
[connection signal="pressed" from="NewGameLoad/VBoxContainer/Back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="Credits/VBoxContainer/CenterContainer/Back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="SaveFiles/VBoxContainer/SaveFile" to="SaveFiles" method="_on_save_file_pressed"]
[connection signal="pressed" from="SaveFiles/VBoxContainer/SaveFile2" to="SaveFiles" method="_on_save_file_2_pressed"]
[connection signal="pressed" from="SaveFiles/VBoxContainer/SaveFile3" to="SaveFiles" method="_on_save_file_3_pressed"]
[connection signal="pressed" from="ConfirmationPanel/VBoxContainer/HBoxContainer/BackButton" to="SaveFiles" method="_on_back_button_pressed"]
[connection signal="pressed" from="ConfirmationPanel/VBoxContainer/HBoxContainer/ConfirmButton" to="SaveFiles" method="_on_confirm_button_pressed"]
